fix design issues

--- a/views/partials/newAnswer.handlebars
+++ b/views/partials/newAnswer.handlebars
@@ -6,7 +6,9 @@
     </div>
     <form action="" method="post" id="answerForm">
         <textarea placeholder="Ваш ответ" name="myAnswer" id="myAnswer" required></textarea>
-        <input id="postAnswerButton" class="borderTop myButton colorDarkLink colorSection" type="image"
-               src="/static/images/send.png" height="60">
+        <div class="marginButton">
+            <input id="postAnswerButton" class="borderTop myButton colorDarkLink colorSection" type="image"
+                   src="/static/images/send.png" height="60">
+        </div>
     </form>
 </div>
