--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -10,40 +10,53 @@ li {
     list-style-type: none; /* Убираем маркеры */
 }
 
-
-.headerLogo {
-    float: left;
+.liCategories {
+    margin-left: -10%;
 }
 
 .headerUser {
-    float: right;
-    margin-right: 15px;
+    display: flex;
+    flex-direction: row;
+    width: 20%;
+    justify-content: space-between;
 }
 
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
 .ulPosts {
-    max-height: 73%;
     min-height: 73%;
+    max-height: 73%;
+}
+
+a {
+    color: white;
 }
 
 #ulReplies, #ulPosts {
     overflow-y: auto;
-    max-height: 73%;
+    max-height: 63%;
     padding-left: 0;
 }
 
 .ulCategories {
     max-height: 90%;
     overflow-y: auto;
-    padding-left: 0;
-    padding-right: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #topBar {
-    line-height: 100px;
-    height: 100px;
-    padding: 0 30px 0 30px;
+    line-height: 200%;
+    height: 5%;
+    padding: 0.7% 1% 0 1%;
     background: #343338;
-    border-radius: 5px;
+    border-radius: 0 0 1vh 1vh;
 }
 
 
@@ -62,7 +75,7 @@ li {
 }
 
 .category {
-    width: 84%;
+    width: 95%;
     margin-bottom: 10%;
 }
 
@@ -106,7 +119,7 @@ li {
     margin-right: 1%;
     border-bottom-left-radius: 1vh;
     border-bottom-right-radius: 1vh;
-    margin-top: 15%;
+    margin-top: 1%;
 }
 
 .borderTop {
@@ -128,7 +141,7 @@ li {
 .container {
     display: flex;
     width: 100%;
-    height: 95%;
+    height: 101%;
 }
 
 
@@ -148,22 +161,24 @@ li {
 }
 
 .category {
-    margin-bottom: 10px;
-    border-radius: 1vh;
-    padding: 10px 10px 10px 30px;
-    line-height: 50px;
-    width: auto;
+    width: 105%;
+    text-align: center;
+    margin-bottom: 4%;
+    border-radius: 0.5vh;
+
 }
 
 .category-link {
+    line-height: 350%;
     display: block;
     font-size: 1.2rem;
+    text-decoration: none;
 }
 
 
 .selectedTheme {
     width: 69%;
-    height: 90%;
+    height: 89.3%;
     margin: 1% 0 0 2%;
     padding: 0 1% 0.5% 1%;
     border-radius: 1vh;
@@ -177,6 +192,18 @@ li {
     padding: 1% 1% 1% 1%;
     border-radius: 1vh;
 
+}
+
+.categoryNotChosen {
+    min-height: 84%;
+    max-height: 84%;
+}
+
+.voteCounter {
+    margin-top: 3%;
+    border-radius: 1vh;
+    padding-left: 10%;
+    text-align: left;
 }
 
 .voteField {
@@ -227,28 +254,37 @@ li {
 .newAnswer {
     display: flex;
     flex-direction: row;
-    position: relative;
-    bottom: 0;
+    height: 29%;
 }
 
-#answerForm {
-    width: 50%;
+.marginButton {
+    margin-left: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 #myAnswer {
-    display: inline-block;
     padding: 12px;
-    width: 81%;
+    margin-left: 1%;
+    margin-right: 1%;
+    resize: none;
+    width: 90%;
     height: 100%;
     font-size: 14pt;
     border-radius: 1vh;
 }
 
-#postAnswerButton {
-    display: inline-block;
-    height: 60px;
+#answerForm {
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    height: 60%;
 }
 
+#postAnswerButton {
+    height: 60px;
+}
 
 #makeDark {
     background: rgba(87, 78, 63, 0.5);
@@ -287,6 +323,9 @@ li {
 }
 
 .sortLink {
+    font-size: 12pt;
+    margin-left: 1%;
+    margin-right: 1%;
     text-decoration: none;
 }
 
@@ -335,12 +374,10 @@ li {
     right: 0;
     top: 60px;
     width: 200%;
-    padding: 10px 0;
+    padding: 2%;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 1vh;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-
-
 }
 
 #profileOptionsList a {
@@ -357,13 +394,10 @@ li {
 #profileOptionsList > li {
     font-size: 1rem;
     line-height: 2;
-
-
 }
 
 #profileOptionsList a:hover {
-    background-color: dodgerblue;
-    color: white !important;
+    background-color: #E1A487;
 }
 
 #profileOptionsList a:active {
@@ -375,8 +409,12 @@ li {
 }
 
 .postCreationBox {
-    max-width: 50%;
-    max-height: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 78%;
+    height: 50%;
+    resize: none;
     text-align: center;
     padding: 1% 1% 1% 1%;
     border-radius: 1vh;
