--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -22,11 +22,18 @@
 
 <div id="postCreation" class="window">
     <form class="postCreationBox colorMain" method="post" action="/category/create">
-        <div class="colorTextLight">Create post</div>
-        <input style="margin-top: 5%; font-size: 14pt" type="text" placeholder="Введите категорию" name="category" required>
-        <textarea placeholder="Создайте свой пост" name="newPost" required></textarea>
-        <input id="postAnswerButton" class="borderTop myButton colorDarkLink colorSection" type="image"
-               src="/static/images/send.png">
+        <div style="display: flex; flex-direction: column; justify-content: center;">
+            <div class="colorTextLight">Category</div>
+            <input style="margin-top: 5%; font-size: 14pt" type="text" placeholder="Введите категорию" name="category" required>
+        </div>
+        <textarea placeholder="Создайте свой пост" name="myPost" id="myAnswer" required></textarea>
+        <div class="marginButton">
+            <input id="postAnswerButton" class="borderTop myButton colorDarkLink colorSection" type="image"
+                   src="/static/images/send.png">
+        </div>
+        <!--        <textarea placeholder="Создайте свой пост" name="newPost" required></textarea>-->
+        <!--        <input id="postAnswerButton" class="borderTop myButton colorDarkLink colorSection" type="image"-->
+        <!--               src="/static/images/send.png">-->
     </form>
 </div>
 
@@ -37,35 +44,38 @@
             <p>Не удалось создать пост</p>
         </div>
     {{/if}}
-    <a class="headerLogo headerText link colorDarkLink colorTextLight" href="/">IU9-Forum</a>
 
-    {{#if user}}
-        <div id="profileTopBar" class="headerUser">
-            <a class="link colorDarkLink colorTextLight"
-               onclick="document.getElementById('postCreation').style.display='block'">Create post</a>
-            <a class="link colorDarkLink colorTextLight" id="showMenu"
-               onclick="showProfileOptionsList()">{{user.username}}</a>
-            {{>profileOptionsList}}
-        </div>
-    {{else}}
-        <div class="headerUser">
-            <a id="logInButton" class="link colorDarkLink colorTextLight"
-               onclick="document.getElementById('signUpForm').style.display='block'">Log In</a>
-            <a id="signUpButton" class="link colorDarkLink colorTextLight"
-               onclick="document.getElementById('logInForm').style.display='block'">Sign Up</a>
-        </div>
-    {{/if}}
+    <div class="header">
+        <a class="headerLogo headerText link colorDarkLink colorTextLight" href="/">IU9-Forum</a>
+
+        {{#if user}}
+            <div id="profileTopBar" class="headerUser">
+                <a class="link colorDarkLink colorTextLight"
+                   onclick="document.getElementById('postCreation').style.display='block'">Create post</a>
+                <a class="link colorDarkLink colorTextLight" id="showMenu"
+                   onclick="showProfileOptionsList()">{{user.username}}</a>
+                {{>profileOptionsList}}
+            </div>
+        {{else}}
+            <div class="headerUser">
+                <a id="logInButton" class="link colorDarkLink colorTextLight"
+                   onclick="document.getElementById('signUpForm').style.display='block'">Log In</a>
+                <a id="signUpButton" class="link colorDarkLink colorTextLight"
+                   onclick="document.getElementById('logInForm').style.display='block'">Sign Up</a>
+            </div>
+        {{/if}}
+    </div>
 
     <script>
-        {{#if message}}
-        if ('{{message}}' === 'User exists' || '{{message}}' === 'Passwords do not match') {
-            document.getElementById('signUpButton').click();
-            document.getElementById('signUpError').innerHTML = '{{message}}';
-        } else if ('{{message}}' === 'Wrong login or password'){
-            document.getElementById('logInButton').click();
-            document.getElementById('logInError').innerHTML = '{{message}}';
-        }
-        {{/if}}
+            {{#if message}}
+            if ('{{message}}' === 'User exists' || '{{message}}' === 'Passwords do not match') {
+                document.getElementById('signUpButton').click();
+                document.getElementById('signUpError').innerHTML = '{{message}}';
+            } else if ('{{message}}' === 'Wrong login or password'){
+                document.getElementById('logInButton').click();
+                document.getElementById('logInError').innerHTML = '{{message}}';
+            }
+            {{/if}}
 
         const list = document.getElementById('profileOptionsList');
 
