--- a/views/partials/postsListPanel.handlebars
+++ b/views/partials/postsListPanel.handlebars
@@ -50,6 +50,7 @@
                         <a class="answerText link ColorTextDark" href="/post/{{this.id}}">{{this.title}}</a>
                         <div class="timeLast">
                             10 minutes ago
+                            {{this.timeSinceCreation}}
                         </div>
                     </div>
                     <div class="voteField">
