Reconfired routes of deleting and editing posts Added buttons on replies which allow user delete and edit replies that were posted by the user Added functions and new SQLrequests for this Reconfigured scripts that popup windows #bugfix Closes: #19

--- a/views/partials/postsListPanel.handlebars
+++ b/views/partials/postsListPanel.handlebars
@@ -69,7 +69,8 @@
     {{/if}}
 </div>
 <script>
-    let box1 = document.getElementById('logInForm'), box2 = document.getElementById('signUpForm'), box3 = document.getElementById('postCreation'), box4 = document.getElementById('postChange');
+    let box1 = document.getElementById('logInForm'), box2 = document.getElementById('signUpForm'), box3 = document.getElementById('postCreation'),
+            box4 = document.getElementById('postChange');
     window.onclick = function (event) {
         if (event.target === box1) {
             box1.style.display = 'none';
@@ -81,11 +82,12 @@
             box4.style.display = 'none';
         }
     }
+
     const deletePost = (id) => {
         let post = {
             id: id
         };
-        fetch('/category/delete', {
+        fetch('/post/delete', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json;charset=utf-8'
@@ -105,7 +107,7 @@
                 category: category,
                 text: document.getElementById('sendEdition').edition.value
             }
-            fetch('/category/edit', {
+            fetch('/post/edit', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json;charset=utf-8'
