--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -1,3 +1,12 @@
+<div id="replyChange" class="window">
+    <form id="sendReply" class="postCreationBox colorMain">
+        <div class="colorTextLight">Edit post</div>
+        <textarea name="replyEdition" id="editReply" required></textarea>
+        <input type="submit" class="borderTop myButton colorDarkLink colorSection" type="image"
+               src="/static/images/send.png">
+    </form>
+</div>
+
 <div class="selectedTheme colorMain">
     <input class="borderTop myButton colorDarkLink colorSection" type="image" src="/static/images/back.png" height="40"
            style="float: left; margin-top: 4.4vh" onclick="history.back();">
@@ -5,30 +14,37 @@
     <ul id="ulReplies" style="max-height: 67%;">
         {{#each replies}}
             <li class="answer colorSection" id="reply_{{this.id}}">
-                <div class="profile">
-                    <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
-                         alt="No avatar" height="100" width="100">
-                    <div class="profileName link colorDarkLink" href="#">{{this.author_name}}</div>
-                </div>
-                <div class="answerText link ColorTextDark">{{this.text}}</div>
+            <div class="profile">
+                <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
+                     alt="No avatar" height="100" width="100">
+                <div class="profileName link colorDarkLink" href="#">{{this.author_name}}</div>
+            </div>
+            <div class="answerText link ColorTextDark">{{this.text}}</div>
 
-                <div class="voteField">
+            <div class="voteField">
+                {{#eq ../user.username this.author_name}}
+                    <a class="profileName link colorDarkLink" onclick="editReply({{this.id}}, '{{this.text}}')">Edit</a>
+                    <a class="profileName link colorDarkLink" onclick="deleteReply({{this.id}})">Delete</a>
+                {{else}}
                     <form action="/vote/{{this.id}}/1" method="post">
                         <input type="image" class="vote" src="/static/images/like.png" alt="#"/>
                     </form>
                     <form action="/vote/{{this.id}}/-1" method="post">
                         <input type="image" class="vote" src="/static/images/dislike.png" alt="#"/>
                     </form>
-                    <div class="voteCounter">{{#if this.rating }}
-                        {{#gt this.rating 0 }}
-                            <span style="color: darkgreen">{{this.rating}}</span>
+                    <div class="voteCounter">
+                        {{#if this.rating }}
+                            {{#gt this.rating 0 }}
+                                <span style="color: darkgreen">{{this.rating}}</span>
+                            {{else}}
+                                <span style="color: darkred">{{this.rating}}</span>
+                            {{/gt}}
                         {{else}}
-                            <span style="color: darkred">{{this.rating}}</span>
-                        {{/gt}}
-                    {{else}}
-                        0
-                    {{/if}}</div>
-                </div>
+                            0
+                        {{/if}}
+                    </div>
+                {{/eq}}
+            </div>
             </li>
         {{/each}}
     </ul>
@@ -37,5 +53,54 @@
     {{else}}
         <p class="colorTextLight">Войдите или зарегистрируйтесь, чтобы ответить</p>
     {{/if}}
-
 </div>
+<script>
+    let box1 = document.getElementById('logInForm'), box2 = document.getElementById('signUpForm'), box3 = document.getElementById('postCreation'),
+            box4 = document.getElementById('replyChange');
+    window.onclick = function (event) {
+        if (event.target === box1) {
+            box1.style.display = 'none';
+        } else if (event.target === box2) {
+            box2.style.display = 'none';
+        } else if (event.target === box3) {
+            box3.style.display = 'none';
+        } else if (event.target === box4) {
+            box4.style.display = 'none';
+        }
+    }
+
+    const deleteReply = (id) => {
+        let post = {
+            id: id
+        };
+        fetch('/delete', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json;charset=utf-8'
+            },
+            body: JSON.stringify(post)
+        }).then( () => {
+            location.reload();
+        });
+    }
+    const editReply = (id, text) => {
+        document.getElementById('replyChange').style.display='block';
+        document.getElementById('editReply').value = text;
+        document.getElementById('sendReply').onsubmit = async (e) => {
+            e.preventDefault();
+            let post = {
+                id: id,
+                text: document.getElementById('sendReply').replyEdition.value
+            }
+            fetch('/edit', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json;charset=utf-8'
+                },
+                body: JSON.stringify(post)
+            }).then( () => {
+                location.reload();
+            });
+        };
+    }
+</script>
